--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
-    <string name="app_name">regist</string>
+    <string name="app_name">AGV</string>
+    <string name="settings">Settings</string>
+    <string name="notes">Notes</string>
+    <string name="shop_list">Shop list</string>
+    <string name="new_item">New</string>
+    <string name="title_hint">Title</string>
+    <string name="description_hint">Description</string>
+    <string name="save">Save</string>
+    <string name="qr_scanner">QR scanner</string>
+    <string name="agv_list">AGV list</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
