Refactor code, add agv images, notes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,21 @@
     <string name="save">Save</string>
     <string name="qr_scanner">QR scanner</string>
     <string name="agv_list">AGV list</string>
+    <string name="agv_txt">Беспилотные транспортные средства “AGV”</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+
+    <string name="agv_text">Успех роботизированных тележек можно объяснить несколькими обстоятельствами.
+        Их маршруты движения заранее запрограммированы, устранены все препятствия
+        и «неожиданности», т. е. окружающая среда идеально приспособлена для
+        движения автоматизированных машин. Внутризаводские «беспилотники»
+        двигаются не быстро, выдерживают дистанцию около метра и оснащены
+        достаточно простыми, надёжными устройствами безопасности, предотвращающими
+        столкновения. Для них не проблема погодные условия,ведь трудятся они в
+        помещении, и всегда рядом инженеры и техники, готовые по
+        первому зову оказать нужную помощь.</string>
+
 
 </resources>
