--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,13 +4,13 @@
     <string name="notes">Notes</string>
     <string name="shop_list">Shop list</string>
     <string name="new_item">New</string>
-    <string name="title_hint">Title</string>
-    <string name="description_hint">Description</string>
+    <string name="description_hint">Описание</string>
+    <string name="serial_number_hint">Серийный номер</string>
     <string name="save">Save</string>
     <string name="qr_scanner">QR scanner</string>
-    <string name="agv_list">AGV list</string>
+    <string name="agv_list">Список AGV</string>
     <string name="agv_txt">Беспилотные транспортные средства “AGV”</string>
-    <string name="add_agv">Add AGV</string>
+    <string name="add_agv">Добавить AGV</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
