--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,62 +15,75 @@
     <string name="add_agv">Добавить AGV</string>
     <string name="ip_agv">http://192.168.0.7/host/</string>
     <string name="ip_agv_pga">http://192.168.175.152/host/</string>
+    <string name="pass_default">121286</string>
+
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
-
-    <string name="agv_text">Успех роботизированных тележек можно объяснить несколькими обстоятельствами.
-        Их маршруты движения заранее запрограммированы, устранены все препятствия
-        и «неожиданности», т. е. окружающая среда идеально приспособлена для
-        движения автоматизированных машин. Внутризаводские «беспилотники»
-        двигаются не быстро, выдерживают дистанцию около метра и оснащены
-        достаточно простыми, надёжными устройствами безопасности, предотвращающими
-        столкновения. Для них не проблема погодные условия,ведь трудятся они в
-        помещении, и всегда рядом инженеры и техники, готовые по
-        первому зову оказать нужную помощь.</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
 
-    <string name="lorem_ipsum">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
-        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
-        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
-        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
-        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
-        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
-        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
-        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
-        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
-        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
-        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
-        bibendum, vel congue leo egestas.\n\n
-        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
-        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
-        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
-        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
-        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
-        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
-        est.\n\n
-        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
-        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
-        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
-        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
-        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
-        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
-        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
-        convallis.\n\n
-        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
-        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
-        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
-        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
-        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
-        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
-        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
-    </string>
+
+    <!--************************************ TO AGV ****************************************-->
+    <string name="body__cleaning">Корпус - очистка от загрязнений</string>
+    <string name="body__Inspection_connections_broaching">Корпус - контроль резьбовых соединений, протяжка</string>
+
+    <string name="positioning_rollers">Позиционирующие ролики - проверить на наличие люфтов</string>
+    <string name="battery_connectors">Разъем АКБ - проверка целостности, протяжка</string>
+    <string name="locks">Замки - наличие и срабатывание</string>
+
+    <string name="security_scanner__cleaning">Сканер безопасности - очистка сканера безопасности</string>
+    <string name="security_scanner__fastenings">Сканер безопасности - проверка крепления кабеля сканера</string>
+
+    <string name="bumper">Бампер - контроль резьбовых соединений, протяжка</string>
+    <string name="front_panel">Лицевая панель - контроль целостности защиты панели</string>
+
+    <string name="electric__sound">Электрика - проверка работы звука</string>
+    <string name="electric__button_panel">Электрика - Контроль целостности кнопок и панели</string>
+
+    <string name="pin__1">PIN - Очистка (c разборкой)</string>
+    <string name="pin__2">PIN - Контроль резбовых соединений, протяжка</string>
+    <string name="pin__3">PIN - Осмотр, контроль люфтов</string>
+    <string name="pin__4">PIN - Проверить укладку проводов</string>
+    <string name="pin__5">PIN - Проверить работу</string>
+    <string name="pin__6">PIN - Контроль верхнего положения</string>
+    <string name="pin__7">PIN - Смазка</string>
+
+    <string name="lift__1">Подъемник - Проверить устан. штифты на кулачке</string>
+    <string name="lift__2">Подъемник - Контроль резбовых соединений, протяжка</string>
+    <string name="lift__3">Подъемник - Проверить крепление опорных подшипников</string>
+    <string name="lift__4">Подъемник - Проверить работу подъемника</string>
+    <string name="lift__5">Подъемник - Проверка срабат. концевиков (настройка)</string>
+
+    <string name="drive_unit__1">Drive unit - Проверить крепление поъемной втулки</string>
+    <string name="drive_unit__2">Drive unit - Контроль резбовых соединений, протяжка</string>
+    <string name="drive_unit__3">Drive unit - Проверка укладки и целостности кабеля</string>
+    <string name="drive_unit__4">Drive unit - Осмотр контроль люфтов</string>
+    <string name="drive_unit__5">Drive unit - Контроль натяжения цепей</string>
+    <string name="drive_unit__6">Drive unit - Смазка цепей</string>
+
+    <string name="track_sensor_and_RFID__1">Датчик трека и RFID - Проверить крепление</string>
+    <string name="track_sensor_and_RFID__2">Датчик трека и RFID - Проверить целостность</string>
+    <string name="track_sensor_and_RFID__3">Датчик трека и RFID - Проверить целостность и укладку кабелей</string>
+    <string name="track_sensor_and_RFID__4">Датчик трека и RFID - Проверить крепление и наличие защиты</string>
+    <string name="track_sensor_and_RFID__5">Датчик трека и RFID - Высота от пола</string>
+
+    <string name="drive_wheels__1">Колеса приводные - Контроль диаметра наружного</string>
+    <string name="drive_wheels__2">Колеса приводные - Проверить продольный люфт</string>
+    <string name="drive_wheels__3">Колеса приводные - Проверить крепление крышки колеса</string>
+
+    <string name="drive_stars__1">Приводные звездочки - Очистка от мусора</string>
+    <string name="drive_stars__2">Приводные звездочки - Проверить устан. штифты на звездах</string>
+    <string name="drive_stars__3">Приводные звездочки - Проверить крепление крышки звездочки</string>
+
+    <string name="turning_wheels__1">Колеса поворотные - Очистка от загрязнений</string>
+    <string name="turning_wheels__2">Колеса поворотные - Проверить продольный люфт</string>
+
+    <string name="back_wheels__1">Колеса задние - Проверить продольный люфт</string>
 
 
 </resources>
